tests/bounded_poly/bounded_poly.exp
Error ----------------------------------------------------------------------------------------------------- test.js:3:21

Cannot assign `x` to `y` because number [1] is incompatible with string [2].

   test.js:3:21
   3|     var y: string = x; // error
                          ^

References:
   test.js:1:28
   1| function foo<T: number>(x: T): T {
                                 ^ [1]
   test.js:3:12
   3|     var y: string = x; // error
                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:9:16

Cannot return `x` because number [1] is incompatible with `T` [2].

   test.js:9:16
   9|         return x; // error, since T: number and U: number does not imply U: T
                     ^

References:
   test.js:8:23
   8|     bar<U: number>(x: U): T {
                            ^ [1]
   test.js:8:27
   8|     bar<U: number>(x: U): T {
                                ^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:13:25

Cannot assign `x` to `y` because number [1] is incompatible with string [2].

   test.js:13:25
   13|         var y: string = x; // error
                               ^

References:
   test.js:11:18
   11|     qux<U: T>(x: U): T {
                        ^ [1]
   test.js:13:16
   13|         var y: string = x; // error
                      ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:22:8

Cannot instantiate `C` because string [1] is incompatible with number [2] in type argument `T`.

   test.js:22:8
   22| var c: C<string> = new C; // error, since T = string is incompatible with number
              ^^^^^^^^^

References:
   test.js:22:10
   22| var c: C<string> = new C; // error, since T = string is incompatible with number
                ^^^^^^ [1]
   test.js:7:12
    7| class C<T: number> {
                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:22:20

Cannot assign `new C` to `c` because string [1] is incompatible with number [2] in type argument `T` [3].

   test.js:22:20
   22| var c: C<string> = new C; // error, since T = string is incompatible with number
                          ^^^^^

References:
   test.js:22:10
   22| var c: C<string> = new C; // error, since T = string is incompatible with number
                ^^^^^^ [1]
   test.js:7:12
    7| class C<T: number> {
                  ^^^^^^ [2]
   test.js:7:9
    7| class C<T: number> {
               ^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:23:17

Cannot assign `c.qux(...)` to `q` because string [1] is incompatible with number [2].

   test.js:23:17
   23| var q: number = c.qux(0);
                       ^^^^^^^^

References:
   test.js:22:10
   22| var c: C<string> = new C; // error, since T = string is incompatible with number
                ^^^^^^ [1]
   test.js:23:8
   23| var q: number = c.qux(0);
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:23:17

Cannot call `c.qux` because number [1] is incompatible with string [2] in type argument `U`.

   test.js:23:17
   23| var q: number = c.qux(0);
                       ^^^^^^^^

References:
   test.js:23:23
   23| var q: number = c.qux(0);
                             ^ [1]
   test.js:22:10
   22| var c: C<string> = new C; // error, since T = string is incompatible with number
                ^^^^^^ [2]



Found 7 errors
